k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
    tier: web
spec:
  type: ClusterIP
  selector:
    app: frontend
    tier: web
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
